--- a/index.css
+++ b/index.css
@@ -1,115 +1,6 @@
-.app {
-    margin: 150px;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 
-.header {
-    display: flex;
-    justify-content: space-between;
-    border: 1px solid black;
- 
-}
 
-.logo {
-    width: 100px;
-}
-
-.nav-items > ul {
-    display:flex;
-    list-style-type: none;
-    font-size: 20px;
-}
-
-.nav-items > ul > li {
-    padding: 10px;
-    margin: 10px;
-}
-
-.res-container{
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  margin: 5px;
-
-}
-
-.res-card{
-    padding: 5px;
-    width: 200px;
-    height: 400px;
-    
-}
-
-.res-card:hover{
-    border: 2px solid black;
-    cursor: pointer;
-}
-
-.search{
-    padding: 10px;
-}
-
-.res-img-logo{
-    /* display: flex; */
-    width: 100%;
-    height: 50%;
-    border-radius: 20px;
-    
-}
-
-.footer{
-    display: flex;
-    border: 1px solid black;
- }
-
- .footer > ul {
-    display:flex;
-    list-style-type: none;
-    font-size: 20px;
-}
-
-.footer > ul > li {
-    padding: 10px;
-    margin: 10px;
-}
-
-.filter{
-    display: flex;
-}
-
-.filter-btn{
-    padding: 5px;
-    margin: 10px;
-    cursor: pointer;
-}
-
-.shimmer-div-container{
-    display: flex;
-    flex-wrap: wrap;
-    margin-top: 50px;
-}
-/* .shimmer-card {
-    margin: 10px;
-    width: 200px;
-    height: 400px;
-    background-color: #f0f0f0;
-    flex-wrap: wrap;
-} */
-
-.shimmer-btn{
-    margin: 10px;
-}
-
-.shimmer-div{
-    margin: 10px;
-    margin-right:40px;
-}
-
-.login-btn {
-    cursor: pointer;
-}
-
-.user-card {
-    padding: 10px;
-    border:1px solid grey;
-}
